# jjfx

./: CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  README.md  mise.toml  skills-lock.json
.github/workflows/: ci.yml
.mise/tasks/: install  release
.scratch/help-menu/issues/: 01-help-overlay.md
.scratch/jj-lib-reads/issues/: 01-migrate-reads-to-jj-lib.md
.scratch/lift-onto-trunk/issues/: 01-lift-onto-trunk.md
.scratch/rebuild/: PRD.md  spike-01-hooks-findings.md  spike-02-jj-lib-findings.md
.scratch/rebuild/epics/: A-foundations.md  B-triage-and-actions.md  C-forge-and-maintenance.md  D-detail-views.md
.scratch/rebuild/issues/: 01-spike-hooks.md  02-spike-jj-lib.md  03-skeleton-store.md  04-agent-lifecycle.md  05-work-lifecycle.md  06-attention-triage.md  07-workspace-actions.md  08-forge.md  09-tidy-tidyws.md  10-diff-detail.md  11-graph.md
.scratch/wsg-migration/: PRD.md
.scratch/wsg-migration/epics/: A-contract-and-coexistence.md  B-worker-pool-and-runtime.md  C-dispatch-and-orchestration.md  D-interfaces-and-cutover.md
.scratch/wsg-migration/issues/: 01-adopt-dispatch-domain.md  02-create-shared-rust-foundation.md  03-lock-down-compatibility-contracts.md  04-import-worker-pool-snapshots.md  05-spike-safe-unix-primitives.md  06-port-state-persistence-and-locking.md  07-port-workspace-and-pool-lifecycle.md  08-port-agent-runtime-and-run-supervision.md  09-port-logs-sessions-and-worker-actions.md  10-port-linear-discovery-and-prompts.md  11-port-direct-dispatch.md  12-port-dispatch-group-model.md  13-port-orchestration-runner.md  14-restore-wsg-workspace-and-pool-cli.md  15-restore-wsg-dispatch-and-session-cli.md  16-integrate-dispatch-into-jjfx.md  17-prove-parity-and-release-from-jjfx.md  18-deprecate-the-go-repository.md
crates/wsg/: Cargo.toml
crates/wsg-core/: Cargo.toml
crates/wsg-core/src/: lib.rs  pool.rs
crates/wsg-core/tests/: compatibility_contract.rs  repository.rs  unix_primitives.rs  worker_pool.rs
crates/wsg-core/tests/fixtures/compatibility/: dispatch-dispatched.json  dispatch-done.json  dispatch-failed.json  dispatch-merged.json  dispatch-pending.json  dispatch-retried.json  pool-empty.json  pool-workers.json  worker-busy-claude.json  worker-done-codex.json  worker-failed-codex.json  worker-idle-claude.json  worker-legacy-omits-runtime.json  ws-cache-malformed.txt  ws-cache-ordered.txt  ws-cache-whitespace.txt
crates/wsg/src/: main.rs
crates/wsg/tests/: cli.rs
docs/: wsg-compatibility-contract.md
docs/adr/: 0001-observe-do-not-orchestrate.md  0002-event-sourced-lifecycle-via-hooks.md  0003-two-orthogonal-lifecycles.md  0004-hook-to-tui-transport-jsonl-log.md  0005-self-contained-native-reimplementation.md  0006-own-rich-store-cache-as-lossy-mirror.md  0007-data-access-jj-lib-syntect-gh.md  0008-attention-first-ui.md  0009-workspace-dispatch-domain.md
src/: agent.rs  app.rs  attention.rs  cache.rs  cmd.rs  config.rs  diff.rs  diff_view.rs  events.rs  forge.rs  graph.rs  hooks.rs  jj.rs  main.rs  pr.rs  prs.rs  repo.rs  store.rs  terminal.rs  trunk.rs  tui.rs  ui_state.rs  viewport.rs  watch.rs  work.rs  workspace_list.rs
src/forge/: pull_requests.rs
