[package]
name = "jjfx"
version = "0.10.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
ratatui = "0.29"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# default-fancy swaps onig (a C dependency) for the pure-Rust fancy-regex engine,
# keeping the build free of a C toolchain. syntect highlights diffs in-process,
# replacing the original bat pipe (ADR 0007).
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
