[package]
name = "jjfx"
version = "0.11.1"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
ratatui = "0.29"
notify = "8"
# jj-lib reads the on-disk .jj store directly for the commit graph (ADR 0007),
# so its version must equal the `jj` mise pin (0.43.0) and upgrade in lockstep.
# pollster block_on's jj-lib's async RepoLoader inside spawn_blocking (spike 02).
jj-lib = "0.43.0"
pollster = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# default-fancy swaps onig (a C dependency) for the pure-Rust fancy-regex engine,
# keeping the build free of a C toolchain. syntect highlights diffs in-process,
# replacing the original bat pipe (ADR 0007).
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
