[package]
name = "jjfx"
version = "0.24.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
ratatui = "0.29"
notify = "8"
# jj-lib reads the on-disk .jj store directly for the commit graph (ADR 0007),
# so its version must equal the `jj` mise pin (0.43.0) and upgrade in lockstep.
# pollster block_on's jj-lib's async RepoLoader inside spawn_blocking (spike 02).
jj-lib = "0.43.0"
pollster = "0.4"
# The DAG column/edge renderer jj's own CLI uses for `jj log`, so the world
# graph lays out exactly like jj's. Version matches the jj 0.43.0 workspace pin.
sapling-renderdag = "0.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# default-fancy swaps onig (a C dependency) for the pure-Rust fancy-regex engine,
# keeping the build free of a C toolchain. syntect highlights diffs in-process,
# replacing the original bat pipe (ADR 0007).
syntect = { version = "5.3", default-features = false, features = ["default-fancy"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
# jjfx's own config file (~/.config/jjfx/config.toml); parsed once at startup.
toml = "0.8"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
