[package]
name = "wsg-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
