[package]
name = "wsg"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"

[dependencies]
anyhow = "1"
wsg-core = { path = "../wsg-core" }

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "warn", priority = -1 }

[lints.clippy]
all = { level = "warn", priority = -1 }
